# creditas-rust-interview

./: Cargo.toml  README.md  application.yml
src/: configuration.rs  main.rs
