[package]
name = "creditas_rust_interview"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "creditas_rust_interview"

[dependencies]
chrono = "0.4.34"
config = "0.11" # TODO: Update "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
